# backend-POC

./: .gitignore  .licenserc.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.ci.yml  docker-compose.dev.yml  pyproject.toml
.github/workflows/: block-main-pr.yml  build-on-macmini.yml  build.yml  quality.yml  security.yml
app/: main.py
backend/: pyproject.toml
backend/app/: main.py
scripts/: README.md  format.sh  install-tools.sh  local-ci.sh
